--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
 </style>
 </head>
 <body>
-<form action="submit_registration.php" method="post">
+<form action="/reg" method="post">
     <h2>Регистрация</h2>
     <label for="username">Имя пользователя:</label>
     <input type="text" id="username" name="username" required>
