--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
+<head>
+    <title>Start Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <style>
-    body {
-        font-family: Arial, sans-serif;
-    }
-    form {
-        max-width: 400px;
-        margin: 0 auto;
-    }
-    input[type="text"],
-    input[type="email"],
-    input[type="password"] {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0;
-        box-sizing: border-box;
-    }
-    input[type="submit"] {
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        float: right;
-    }
-    input[type="submit"]:hover {
-        background-color: #45a049;
-    }
-</style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .login-link {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-<form action="/reg" method="post">
+<form action="/RegistrationServlet" method="post">
     <h2>Регистрация</h2>
     <label for="username">Имя пользователя:</label>
     <input type="text" id="username" name="username" required>
@@ -44,6 +54,7 @@
     <label for="password">Пароль:</label>
     <input type="password" id="password" name="password" required>
     <input type="submit" value="Зарегистрироваться">
+    <a href="login.html" class="login-link">Уже есть аккаунт? Войти</a>
 </form>
 </body>
 </html>
