--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <style>
-    body {
+    body{
         font-family: Arial, sans-serif;
     }
     form {
@@ -36,7 +36,7 @@
 </head>
 <body>
 <form action="/LoginServlet" method="post">
-    <h2>Регистрация</h2>
+    <h2>Логин</h2>
     <label for="username">Имя пользователя:</label>
     <input type="text" id="username" name="username" required>
     <label for="password">Пароль:</label>
